# teika

./: .gitignore  .lia.cache  .ocamlformat  Cargo.toml  LICENSE  README.md  REFERENCES.md  _itree.ml_  _test.ml  _tprinter.ml  _tprinter.mli  _ttree.ml_  after_flatten.ml  asm.dump  dune-project  esy.json  example.js  flake.nix  flatten.ml  flatten.mli  ftree.ml  ftree.mli  grain.md  ideas.md  ind.v  jprinter.ml  jprinter.mli  jsgen.ml  jsgen.mli  jtree.ml  jtree.mli  land.md  lang.md  linear.md  linlc.v  live.js  live.md  live.ts  n512.cmi  n512.cmo  (+17 more)
bytegen/: dune
design/: A.md  BYTECODE.md  CALCULUS.md  COMPILER.md  COMPILER2.md  ERRORS.md  FEATURES.md  FIXPOINT.md  GOALS.md  HoTT.md  INFERENCE.md  LANGUAGE.md  LSP.md  MACROS.md  MEMORY.md  MODULE.md  MONEY.md  OCAML.md  SPECIFICATION.md  SYNTAX.md  TYPER.md  lang.md
esy.lock/: index.json
examples/: bool.tei  linear.te
hacking/: dune  fast_normal.ml  mem.js  n512.js  n512.ts
jsend/: dune  emit.ml  emit.mli  jprinter.ml  jprinter.mli  jtree.ml  jtree.mli  runtime.js  test.ml  untype.ml  untype.mli  utree.ml  utree.mli  var.ml  var.mli
nix/: default.nix  overlay.nix  shell.nix
rust_bench/: main.rs
smol/: HACKING.md  dune  env.ml  env.mli  index.mli  level.ml  lexer.ml  lexer.mli  literal.ml  literal.mli  lparser.ml  lparser.mli  ltree.ml  ltree.mli  machinery.ml  machinery.mli  parser.mly  repl.ml  slexer.ml  sparser.mly  stree.ml  stree.mli  styper.ml  term.ml  term.mli  test.ml  tprinter.ml  transl_type.ml  transl_type.mli  ttree.ml  ttree.mli  ttyper.ml  type.ml  type.mli  type_expr.ml  type_expr.mli  typer.ml  var.ml  var.mli
src/: HACKING.md
src/language/: dune  interpret.ml  interpret.mli  language.ml  language.mli  tree.ml
src/syntax/: dune  hack.ml  lexer.ml  lexer.mli  parser.mly  syntax.ml  syntax.mli  test.ml  token.mli  tree.ml
src/typer/: dune  env.ml  env.mli  forall.ml  forall.mli  generalize.ml  generalize.mli  helpers.ml  helpers.mli  ident.ml  ident.mli  instance.ml  instance.mli  kind.ml  kind.mli  lower.ml  lower.mli  name.ml  name.mli  print.ml  print.mli  print_type.ml  print_type.mli  rank.ml  rank.mli  test.ml  transl_kind.ml  transl_kind.mli  transl_type.ml  transl_type.mli  tree.ml  type.ml  type.mli  type_expr.ml  type_expr.mli  type_pat.ml  type_pat.mli  type_term.ml  type_term.mli  type_utils.ml  (+6 more)
src/typer/type/: copy.ml  dune  helpers.ml  helpers.mli  lower.ml  lower.mli  print.ml  print.mli  rank.mli  repr.ml  repr.mli  type.ml  type.mli
src/utils/: dune  mem_map.ml  mem_map.mli  name.mli  uid.ml  uid.mli
syntax/: clexer.ml  clexer.mli  cparser.mly  ctree.ml  ctree.mli  dune  lparser.ml  lparser.mli  ltree.ml  ltree.mli  name.ml  slexer.ml  sparser.mly  stree.ml  stree.mli
teika/: context.ml  context.mli  dune  escape_check.ml  escape_check.mli  expand_head.ml  expand_head.mli  f_omega.ml  index.ml  index.mli  instance.ml  instance.mli  level.ml  level.mli  lparser.ml  lparser.mli  ltree.ml  ltree.mli  name.ml  name.mli  normalize.ml  normalize.mli  offset.ml  offset.mli  repl.ml  shift.ml  shift.mli  slexer.ml  slexer.mli  solve.ml  solve.mli  sparser.mly  stree.ml  stree.mli  subst.ml  subst.mli  terror.ml  terror.mli  test.ml  tmachinery.ml  (+14 more)
teikalsp/: dune  lsp_channel.ml  lsp_channel.mli  lsp_context.ml  lsp_context.mli  lsp_error.ml  lsp_error.mli  lsp_notification.ml  lsp_notification.mli  lsp_request.ml  lsp_request.mli  lsp_text_document.ml  lsp_text_document.mli  teikalsp.ml
teikavsc/: .gitignore  esbuild.js  main.js  main.ts  package.json  teika.syntax.json  tsconfig.json
teikavsc/src/: extension.ts  global.d.ts  highlighting.ts
utils/: dune  name.mli  utils.ml  utils.mli
x/: test  test.cmi  test.cmx  test.ml
