(library
 (name smol)
 (libraries menhirLib compiler-libs.common)
 (modules
  (:standard \ Test))
 (preprocess
  (pps ppx_deriving.show sedlex.ppx)))

(menhir
 (modules sparser)
 (flags --dump --explain))

(executable
 (name test)
 (modules Test)
 (libraries alcotest smol)
 (preprocess
  (pps ppx_deriving.show)))

(rule
 (alias runtest)
 (deps
  (:exe ./test.exe))
 (action
  (run %{exe})))
