(library
 (name smol)
 (libraries syntax)
 (modules
  (:standard \ Test))
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord sedlex.ppx)))

(executable
 (name test)
 (modules Test)
 (libraries alcotest smol)
 (preprocess
  (pps ppx_deriving.show)))

(rule
 (alias runtest)
 (deps
  (:exe ./test.exe))
 (action
  (run %{exe})))
