(library
 (name syntax)
 (libraries menhirLib compiler-libs.common utils zarith)
 (modules
  (:standard \ Test))
 (preprocess
  (pps ppx_deriving.eq ppx_deriving.ord ppx_deriving.show sedlex.ppx)))

(menhir
 (modules cparser)
 (flags --dump --explain))

(executable
 (name test)
 (modules Test)
 (libraries alcotest syntax)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord)))

(rule
 (alias runtest)
 (deps
  (:exe ./test.exe))
 (action
  (run %{exe})))
