(library
 (name teika)
 (libraries menhirLib compiler-libs.common)
 (modules
  (:standard \ Test Context Subst Unify Normalize))
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord sedlex.ppx)))

(menhir
 (modules sparser)
 (flags --dump --explain))

(executable
 (name test)
 (modules Test)
 (libraries alcotest teika)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord)))

(rule
 (alias runtest)
 (deps
  (:exe ./test.exe))
 (action
  (run %{exe})))
