(library
 (name teika)
 (libraries syntax compiler-libs.common)
 (modules
  (:standard \ Test))
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord sedlex.ppx)))

(executable
 (name test)
 (modules Test)
 (libraries alcotest teika)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord)))

(rule
 (alias runtest)
 (deps
  (:exe ./test.exe))
 (action
  (run %{exe})))
