(library
 (name teika)
 (libraries syntax compiler-libs.common)
 (modules
  (:standard \ Test Repl))
 (preprocess
  (pps
   ppx_deriving.show
   ppx_sexp_conv
   ppx_deriving.eq
   ppx_deriving.ord
   sedlex.ppx)))

(executable
 (name repl)
 (modules Repl)
 (libraries teika eio))

(rule
 (alias runrepl)
 (deps
  (:exe ./repl.exe))
 (action
  (run %{exe})))

(executable
 (name test)
 (modules Test)
 (libraries alcotest teika)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord)))

(rule
 (alias runtest)
 (deps
  (:exe ./test.exe))
 (action
  (run %{exe})))
